<?xml version="1.0" encoding="UTF-8"?>

<!--
// Copyright (c) 2022,2024 Contributors to the Eclipse Foundation
//
// See the NOTICE file(s) distributed with this work for additional
// information regarding copyright ownership.
//
// This program and the accompanying materials are made available under the
// terms of the Apache License, Version 2.0 which is available at
// https://www.apache.org/licenses/LICENSE-2.0.
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
// WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
// License for the specific language governing permissions and limitations
// under the License.
//
// SPDX-License-Identifier: Apache-2.0
-->

<!--
  Pom for building EDC extensions
-->
<project>
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.eclipse.tractusx.agents</groupId>
    <artifactId>edc</artifactId>
    <version>1.12.19</version>
    <packaging>pom</packaging>
    <name>Tractus-X Knowledge Agents EDC Extensions</name>
    <description>EDC-Related Artifacts for Federated Procedure Calls</description>
    <dependencies>
    </dependencies>
    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <skipTests>false</skipTests>

        <junit.version>5.10.2</junit.version>
        <mockito.version>5.2.0</mockito.version>
        <tx.edc.version>0.7.0</tx.edc.version>
        <edc.version>0.6.1</edc.version>
        <failsafe.version>3.3.2</failsafe.version>
        <okhttp.version>4.12.0</okhttp.version>
        <okio.version>3.6.0</okio.version>
        <slf4j.version>2.0.12</slf4j.version>
        <jakarta.ws.rs-api.version>3.1.0</jakarta.ws.rs-api.version>
        <com.nimbusds.version>9.37.3</com.nimbusds.version>
        <javax.servlet-api.version>4.0.1</javax.servlet-api.version>
        <jetty-jakarta-servlet-api.version>5.0.2</jetty-jakarta-servlet-api.version>
        <org.apache.jena.version>4.9.0</org.apache.jena.version>
        <com.azure.azure-identity.version>1.11.4</com.azure.azure-identity.version>
        <com.azure.azure-security-keyvault-secrets.version>4.8.1</com.azure.azure-security-keyvault-secrets.version>
        <jackson.version>2.17.0</jackson.version>
        <org.yaml.snakeyaml.version>2.2</org.yaml.snakeyaml.version>
        <net.minidev.jsonsmart.version>2.5.0</net.minidev.jsonsmart.version>
        <net.java.dev.jna.version>5.13.0</net.java.dev.jna.version>
        <org.reactivestreams.version>1.0.4</org.reactivestreams.version>
        <jetbrains.kotlin.version>1.9.10</jetbrains.kotlin.version>
        <io.micrometer.version>1.12.5</io.micrometer.version>
        <netty.nio.core-http2.version>4.1.108.Final</netty.nio.core-http2.version>
        <commons.compress.version>1.26.0</commons.compress.version>
        <jetty.version>11.0.20</jetty.version>
        <reactor.netty.version>1.0.44</reactor.netty.version>
        <awssdk.version>2.24.10</awssdk.version>

        <!-- Source characteristics -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- REPO -->
        <repo>tractusx/</repo>
        <platform>linux/amd64</platform>
        <jvm.agent></jvm.agent>

    </properties>
    <modules>
        <module>common/auth-jwt</module>
        <module>agent-plane</module>
    </modules>
    <dependencyManagement>
        <dependencies>
            <!-- Packages -->
            <dependency>
                <groupId>com.azure</groupId>
                <artifactId>azure-identity</artifactId>
                <version>${com.azure.azure-identity.version}</version>
            </dependency>
            <dependency>
                <groupId>com.azure</groupId>
                <artifactId>azure-security-keyvault-secrets</artifactId>
                <version>${com.azure.azure-security-keyvault-secrets.version}</version>
            </dependency>
            <!-- BOMs -->
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-bom</artifactId>
                <version>${mockito.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>

            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.2.5</version>
                    <!-- unfortunately you have to repeat that in all relevant sub-modules -->
                    <configuration>
                        <groups>!online</groups>
                        <argLine>@{jvm.agent} -Dnet.bytebuddy.experimental=true</argLine><!-- Needed as EqualsVerifier uses Byte Buddy which doesn't support Java 21 -->
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>3.5.0</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <!--
                        NOTE: To build and tag docker images the `docker` executable needs to
                                be on the PATH to be used by the exec-maven-plugin plugin
                    -->
                    <executions>
                        <execution>
                            <id>docker-build-${project.artifactId}:${project.version}</id>
                            <phase>package</phase>
                            <goals>
                                <goal>exec</goal>
                            </goals>
                            <configuration>
                                <executable>docker</executable>
                                <workingDirectory>${project.basedir}</workingDirectory>
                                <arguments>
                                    <argument>build</argument>
                                    <argument>--platform</argument>
                                    <argument>${platform}</argument>
                                    <argument>-f</argument>
                                    <argument>src/main/docker/Dockerfile</argument>
                                    <argument>-t</argument>
                                    <argument>${repo}${project.artifactId}:${project.version}</argument>
                                    <argument>.</argument>
                                </arguments>
                            </configuration>
                        </execution>
                        <execution>
                            <id>docker-tag-${project.artifactId}:latest</id>
                            <phase>package</phase>
                            <goals>
                                <goal>exec</goal>
                            </goals>
                            <configuration>
                                <executable>docker</executable>
                                <workingDirectory>${project.basedir}</workingDirectory>
                                <arguments>
                                    <argument>tag</argument>
                                    <argument>${repo}${project.artifactId}:${project.version}</argument>
                                    <argument>${repo}${project.artifactId}:latest</argument>
                                </arguments>
                            </configuration>
                        </execution>
                        <execution>
                            <id>docker-push-${project.artifactId}:${project.version}</id>
                            <phase>deploy</phase>
                            <goals>
                                <goal>exec</goal>
                            </goals>
                            <configuration>
                                <executable>docker</executable>
                                <workingDirectory>${project.basedir}</workingDirectory>
                                <arguments>
                                    <argument>push</argument>
                                    <argument>${repo}${project.artifactId}:${project.version}</argument>
                                </arguments>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.3.0</version>
                </plugin>
                <plugin>
                    <groupId>com.diffplug.spotless</groupId>
                    <artifactId>spotless-maven-plugin</artifactId>
                    <version>2.42.0</version>
                    <executions>
                        <execution>
                            <id>format</id>
                            <phase>process-sources</phase>
                            <goals>
                                <goal>check</goal>
                                <goal>apply</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-checkstyle-plugin</artifactId>
                    <version>3.3.0</version>
                    <configuration>
                        <configLocation>${session.executionRootDirectory}/resources/tx-checkstyle-config.xml</configLocation>
                        <propertyExpansion>
                            config_loc=${session.executionRootDirectory}/resources
                        </propertyExpansion>
                        <consoleOutput>true</consoleOutput>
                        <failsOnError>true</failsOnError>
                        <linkXRef>false</linkXRef>
                    </configuration>
                    <executions>
                        <execution>
                            <id>validate</id>
                            <phase>validate</phase>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.dash</groupId>
                    <artifactId>license-tool-plugin</artifactId>
                    <version>1.1.1-SNAPSHOT</version>
                    <configuration>
                        <projectId>automotive.tractusx</projectId>
                        <summary>DEPENDENCIES</summary>
                        <includeScope>test</includeScope>
                    </configuration>
                    <executions>
                        <execution>
                            <id>license-check</id>
                            <goals>
                                <goal>license-check</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <repositories>
        <repository>
            <id>central</id>
            <name>Maven Central</name>
            <url>https://repo1.maven.org/maven2</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>dash-licenses-snapshots</id>
            <url>https://repo.eclipse.org/content/repositories/dash-licenses-snapshots/</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>Tractus-X Maven Repository on Github</name>
            <url>https://maven.pkg.github.com/eclipse-tractusx/knowledge-agents-edc</url>
        </repository>
    </distributionManagement>

</project>
